# ai-agent-murmuration

./: .gitignore  .murmur-session-notes.md  .murmur-worktree.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  PLAN.md  README.md  claude-orchestration-frameworks.md  config.example.toml  issue-dispatch-system-design.md
.github/workflows/: ci.yml
design/: agent-execution.md  cli-design.md  code-structure.md  configuration.md  database-schema.md  error-handling.md  github-integration.md  project-structure.md  sangha-governance.md  testing-strategy.md  tui-design.md
design/api/: rest-api.md  websocket-api.md
docs/: architecture.md  cli-reference.md  concepts.md  configuration.md  getting-started.md  github-token.md  naming-proposal.md  troubleshooting.md
docs/workflows/: code-review.md  github-issues.md  multi-agent.md  project-bootstrap.md  tdd-workflow.md
murmur-cli/: Cargo.toml
murmur-cli/src/: main.rs
murmur-cli/src/commands/: agent.rs  issue.rs  mod.rs  orchestrate.rs  plan.rs  run.rs  status.rs  tdd.rs  work.rs  worktree.rs
murmur-core/: Cargo.toml
murmur-core/src/: config.rs  error.rs  lib.rs  secrets.rs
murmur-core/src/agent/: backend.rs  mod.rs  output.rs  prompts.rs  selection.rs  spawn.rs  typed.rs  types.rs
murmur-core/src/agent/backends/: claude.rs  cursor.rs  mod.rs
murmur-core/src/agent/prompts/: coordinator.md  implement.md  review.md  test.md
murmur-core/src/git/: branch.rs  clone.rs  mod.rs  pool.rs  repo.rs  worktree.rs
murmur-core/src/plan/: mod.rs  parser.rs
murmur-core/src/review/: mod.rs  request.rs  reviewer.rs
murmur-core/src/workflow/: coordinator.rs  mod.rs  resume.rs  review.rs  state.rs  tdd.rs  test_runner.rs  transitions.rs
murmur-db/: Cargo.toml  README.md
murmur-db/migrations/: 001_init.sql  001_initial_schema.sql  20250101000000_initial_schema.sql
murmur-db/src/: connection.rs  conversation_logger.rs  db.rs  error.rs  lib.rs  models.rs  schema.rs
murmur-db/src/repos/: agents.rs  conversations.rs  issues.rs  mod.rs  stream_handler.rs  worktrees.rs
murmur-github/: Cargo.toml
murmur-github/src/: client.rs  create.rs  dependencies.rs  error.rs  graphql.rs  issues.rs  lib.rs  metadata.rs  pr.rs  review.rs
