[workspace]
resolver = "2"
members = [
    "murmur-core",
    "murmur-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jmalicki-ai-slop/ai-agent-murmuration"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
humantime-serde = "1.1"

# Config directories
dirs = "6.0"

# Git operations
git2 = "0.19"
url = "2.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
murmur-core = { path = "murmur-core" }
