[package]
name = "murmur-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Murmuration multi-agent orchestration"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
humantime-serde.workspace = true
dirs.workspace = true
git2.workspace = true
url.workspace = true
thiserror.workspace = true
tracing.workspace = true
murmur-db.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
