[package]
name = "murmur-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
