[package]
name = "murmur-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database persistence layer for Murmuration"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
dirs.workspace = true

# SQLx with SQLite support
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
