[package]
name = "murmur-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database layer for Murmuration multi-agent orchestration"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { workspace = true }
dirs.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
