[package]
name = "murmur-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GitHub integration for Murmuration multi-agent orchestration"

[dependencies]
murmur-core.workspace = true
octocrab.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
chrono.workspace = true

[lints]
workspace = true
